2005-05-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/editor.scm (slashify): New function.
	(get-editor-command): Use it.
	(get-command-template): Do not alter editor command if
	environment value includes `%(file)s' magic.

	* scripts/lilypond-invoke-editor.scm (unquote-uri): New function.
	(dissect-uri): Use it.
	(unquote-uri): Bugfix.

2005-05-15  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* scm/framework-ps.scm (write-preamble): add TTF rule.

	* Documentation/topdocs/README.texi (Top): remove note about
	xdelta.

	* Documentation/topdocs/INSTALL.texi (Top): remove Flex
	requirement.

	* stepmake/aclocal.m4: STEPMAKE_FLEXLEXER_LOCATION: new
	function. Figure out where FlexLexer.h lives

	* lily/GNUmakefile (OUT_DIST_FILES): dist lexer.cc and FlexLexer.h
	
2005-05-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/lilypond-invoke-editor.scm (dissect-uri): Handle URIs
	with Windows root in file name.

	* scm/backend-library.scm (ly:system): Only redirect output (using
	system and shell, ugh) if /dev/null is writable.

	* Documentation/pictures/GNUmakefile [PLATFORM_WINDOWS]: Build
	windows icon.

	* scm/lily.scm (is-absolute?): New function.  Fixes absolute files
	on Mingw.

	* scm/output-ps.scm (grob-cause): Use it.  Fixes PDF point and
	click.

	* flower/file-path.cc (is_dir, is_file): New function.  Actually
	use result of stat when available.

	* flower/file-path.cc (find): Use it.  Refactor.  Fixes Mingw,
	absolute file name and root.

	* scm/lily.scm (PLATFORM): On mingw, slashify getcwd.

	* scm/editor.scm (get-editor-command): Typo: do not apply editor.

	* flower/file-name.cc (slashify): Bugfix, do substitute if no
	slashes in file name.

2005-05-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/preface.itely (Preface): Run
	texinfo-all-menus-update.

	* scm/editor.scm (get-editor-command): Bugfix: allow full
	LYEDITOR setting, partial XEDITOR setting.  With typo fix.

	* Documentation/pictures/lilypond-48.xpm: New file.
