@@ -1,5 +1,8 @@
 2005-05-15  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/pango-font.cc (pango_item_string_stencil): Normalize file
+	name.  Remove windows comment.
+
 	* scm/editor.scm (slashify): New function.
 	(get-editor-command): Use it.
 	(get-command-template): Do not alter editor command if
